# device-envoy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  all_docs.txt  build.rs  device-envoy.code-workspace  justfile
.cargo/: config.toml
.github/workflows/: check-all.yml
demos/: Cargo.toml  README.md
demos/a_led/: a1_strip_8_blue_gray.rs  a2_strip_8_blue_white_blink.rs  a2_strip_8_blue_white_dot.rs  a3_strip_8_blue_white_blink_animate.rs  a4_strip_96_blue_white_dot.rs
demos/a_strip/: a1_strip_8_blue_gray.rs  a2_strip_8_blue_white_blink.rs  a3_strip_8_blue_white_blink_animate.rs  a4_strip_96_blue_white_dot.rs
demos/b_led/: b1_panel_12x8_rust_cursor.rs  b2_panel_12x8_text_graphics.rs
demos/b_panel/: b1_panel_12x8_rust_cursor.rs  b2_panel_12x8_text_graphics.rs
demos/c_button/: c1_button_8_yellow_button_blink.rs  c2_button_8_color_button_blink.rs
demos/c_led/: c1_strip_8_yellow_button_blink.rs  c2_strip_8_color_button_blink.rs
demos/d_servo/: d1_servo_single_sweep.rs  d2_servo_animate.rs
demos/e_flash/: e0_reset.rs  e1_power_counter.rs
demos/f_wifi_auto/: f1_dns.rs  f1_time_logger.rs  f1_unix_time.rs
demos/g_clock/: g1_clock_sync.rs
examples/: audio.rs  audio_adpcm.rs  audio_adpcm_resample.rs  audio_cues.rs  audio_example1.rs  audio_example2.rs  audio_example3.rs  audio_example_1.rs  audio_example_2.rs  audio_example_3.rs  audio_resample.rs  blinky.rs  clock_audio.rs  clock_console.rs  clock_lcd.rs  clock_led12x4.rs  clock_led4.rs  clock_led4_wifi.rs  clock_led8x12.rs  clock_servos.rs  concat_h.rs  conway.rs  flash.rs  full.rs  ir.rs  ir_kepler.rs  ir_nec_pio.rs  led.rs  led2d.rs  led2d1.rs  led2d2.rs  led2d_graphics.rs  led2d_graphics_png.rs  led8x12.rs  led_strip.rs  led_strip1.rs  led_strip3.rs  led_strip_3_on_a_pio.rs  led_strip_animate.rs  led_strip_broadway.rs  (+17 more)
examples/data/: conway_board.rs
examples/data/audio/: README.md  computers_in_control_mono_s16le_22050.raw  computers_in_control_mono_s16le_44100.raw  jabberwocky_22k.s16  nasa_22k.s16
examples/data/frame-data/: video_frames_data.rs
scripts/: docdoc.sh  gather-docs.sh  gather.bat  gather.sh  make_hand_video.py  open-docs-host.sh  open-docs.sh  regenerate-text-pngs.sh  update-docs.sh
src/: adpcm_player.rs  audio_player.rs  bit_matrix_led4.rs  button.rs  char_lcd.rs  clock.rs  clock_sync.rs  device-envoy.code-workspace  error.rs  flash_array.rs  ir.rs  led.rs  led2d.rs  led4.rs  led_layout.rs  led_strip.rs  led_strip_host.rs  lib.rs  pio_irqs.rs  rfid.rs  servo.rs  servo_animate.rs  servo_player.rs  time_sync.rs  to_png.rs  wifi.rs  wifi_auto.rs
src/adpcm_player/: adpcm_clip_generated.rs  adpcm_player_generated.rs
src/audio_player/: adpcm_clip_docs.md  adpcm_clip_generated.rs  adpcm_clip_step_3.md  audio_clip_generated.rs  audio_player_generated.rs  audio_prep_steps_1_2.md  host_tests.rs  pcm_clip_docs.md  pcm_clip_generated.rs  pcm_clip_step_3.md
src/button/: button_watch.rs  button_watch_generated.rs
src/docs/: current_limiting_and_gamma.md
src/ir/: ir_pio.rs  kepler.rs  mapping.rs
src/led2d/: layout.rs  led2d_generated.rs
src/led4/: led4_simple.rs
src/led_strip/: led_strip.md  led_strip_generated.rs
src/servo_player/: servo_player_generated.rs
src/wifi_auto/: credentials.rs  dhcp.rs  dns.rs  fields.rs  portal.rs  stack.rs
tests/: led2d_graphics_png.rs  led2d_mapping_algebra.rs  led2d_text_render.rs  led_strip_rgb_conversion.rs  mapping.rs  pngs.rs
tests-compile-only/: Cargo.toml  audio_player_with_resampled_wrong_count_should_fail.rs  led12x4.rs  led2d_custom_mapping.rs  led2d_multiple.rs  led2d_visibility.rs  led_strip_all_pios.rs  led_strip_pio0.rs  led_strip_pio1.rs  led_strip_two_one.rs  led_strip_visibility.rs  led_strip_visibility_public_private.rs
tests/data/audio_with_gain/: README.md  tone_440hz_32.s16  tone_440hz_32_gain_200.s16  tone_440hz_32_gain_50.s16  tone_440hz_32_resampled_16000hz_23.s16  tone_440hz_32_resampled_22050hz_16.s16
tests/data/text_render/: README.md
xtask/src/: adpcm_clip_generated.rs  adpcm_player_generated.rs  audio_clip_generated.rs  audio_player_generated.rs  led2d_generated.rs  led_strip_generated.rs  main.rs  pcm_clip_generated.rs  servo_player_generated.rs  video_frames_gen.rs
